--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Moneypi YouTube App</title>
-    <!-- Add Google's verification meta tag here later (Step 2) -->
+    <meta name="google-site-verification" content="mncd7smh0GJJ-3aFUnb5VxA6YTcpvlQ18PwjTiYa1Ls" />
 </head>
 <body>
     <h1>Moneypi YouTube App</h1>
