--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Moneypi YouTube App</title>
+    <title>MoneyPi-YouTube App</title>
     <meta name="google-site-verification" content="mncd7smh0GJJ-3aFUnb5VxA6YTcpvlQ18PwjTiYa1Ls" />
 </head>
 <body>
-    <h1>Moneypi YouTube App</h1>
+    <h1>MoneyPi-YouTube App</h1>
     <p>This is a personal Raspberry Pi project that schedules YouTube live streams when motion is detected on a webcam. It uses the YouTube Data API for personal use only and is not shared with others.</p>
     <p><a href="/privacy.html">Privacy Policy</a></p>
     <p>Contact: randallmreynolds@gmail.com</p>
