--- a/privacy.html
+++ b/privacy.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Moneypi YouTube Privacy Policy</title>
+    <title>MoneyPi-YouTube Privacy Policy</title>
 </head>
 <body>
-    <h1>Moneypi YouTube Privacy Policy</h1>
+    <h1>MoneyPi-YouTube Privacy Policy</h1>
     <p>Last Updated: September 1, 2025</p>
     <p>Moneypi YouTube is a personal project running on a Raspberry Pi to automatically schedule YouTube live streams when motion is detected via a webcam. This app uses the YouTube Data API (scope: https://www.googleapis.com/auth/youtube) to create and manage live stream events.</p>
     <p>Data Usage:</p>
